--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   enum_to_string: ^2.0.1
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.1
-  riverpod: ^2.3.6
+  #riverpod: ^2.3.6
   dartz: ^0.10.1
   dio: ^5.1.2
   flutter_svg: ^2.0.5
