--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.1
   dartz: ^0.10.1
+  uuid: ^3.0.7
   dio: ^5.1.2
   flutter_svg: ^2.0.5
   youtube_player_iframe: ^4.0.4
+  url_launcher: ^6.1.11
 
 
   # The following adds the Cupertino Icons font to your application.
