--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,14 @@ dependencies:
   enum_to_string: ^2.0.1
   flutter_riverpod: ^2.3.6
   dartz: ^0.10.1
-  uuid: ^3.0.7
   dio: ^5.1.2
+  username_gen: ^1.0.4
+  riverpod_annotation: ^2.1.1
+  riverpod_generator: ^2.2.3
   flutter_svg: ^2.0.5
   youtube_player_iframe: ^4.0.4
   url_launcher: ^6.1.11
+  logger: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -51,6 +54,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
