--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,15 @@ dependencies:
   dartz: ^0.10.1
   dio: ^5.1.2
   username_gen: ^1.0.4
+  intl: ^0.18.1
   riverpod_annotation: ^2.1.1
   riverpod_generator: ^2.2.3
   flutter_svg: ^2.0.5
   youtube_player_iframe: ^4.0.4
   url_launcher: ^6.1.11
   logger: ^1.3.0
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
