--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   youtube_player_iframe: ^4.0.4
   url_launcher: ^6.1.11
   logger: ^1.3.0
+  shimmer: ^3.0.0
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
 
