--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   logger: ^1.3.0
   shimmer: ^3.0.0
   carousel_slider: ^4.2.1
+  sliver_tools: ^0.2.12
+  marquee: ^2.2.3
   cached_network_image: ^3.2.3
 
 
